[package]
name = "tonic-examples"
version = "0.1.0"
authors = ["Gaius <gaius.qi@gmail.com>"]
edition = "2018"

[[bin]]
name = "echo-server"
path = "src/server.rs"

[[bin]]
name = "echo-client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tonic = "0.8.3"
prost = "0.11.5"
tokio = { version = "1.8.2", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
tonic-build = "0.8.3"
